# RTEdesign

Include/: UcitRteBase.hpp
SplitModule/: CMakeLists.txt
SplitModule/include/: ImageAnalysis.hpp  SplitIF.hpp  videostab.h
SplitModule/src/: IOUT.cpp  ImageAnalysis.cpp  main.cpp  mainsplit.cpp  videostab.cpp
src/: UcitRteBase.cpp  main.cpp
